# aquascope

./: CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  MAINTAINERS.md  README.md  ROADMAP.md  mkdocs.yml  paper.bib  paper.md  pyproject.toml
.github/: CODEOWNERS  FUNDING.yml
.github/workflows/: ci.yml  docs.yml  publish.yml
aquascope/: __init__.py  cli.py
aquascope/agri/: __init__.py  water_balance.py
aquascope/ai_engine/: recommender.py
aquascope/analysis/: __init__.py  extreme_events.py  metrics.py
aquascope/climate/: __init__.py  indices.py
aquascope/collectors/: __init__.py  base.py  india_wris.py  japan_mlit.py  korea_wamis.py  taiwan_wra.py  usgs.py  wqp.py
aquascope/dashboard/: app.py
aquascope/groundwater/: __init__.py  drought.py  wells.py
aquascope/hydrology/: __init__.py  baseflow.py
aquascope/io/: __init__.py  interop.py
aquascope/models/: base.py  rainfall_runoff.py  transfer.py
aquascope/schemas/: water_data.py
aquascope/utils/: collect_many.py  http_client.py  imports.py  storage.py
binder/: requirements.txt
docs/: data_sources.md  features.md  getting_started.md  index.md
docs/guides/: architecture.md  uncertainty.md
docs/integration_guides/: xarray_integration.md
examples/: 11_interop_xarray.py  12_uq_camels_benchmark.py  13_groundwater_drought_sgi.py
notebooks/: 01_quickstart_tutorial.ipynb
tests/test_agri/: test_agri.py  test_water_balance_edge_cases.py
tests/test_analysis/: test_metrics.py  test_water_quality_index.py
tests/test_challenges/: test_challenges.py
tests/test_climate/: test_indices.py  test_spi.py
tests/test_collectors/: test_collect_many.py  test_india_wris.py  test_japan_mlit.py  test_korea_wamis.py  test_taiwan_wra_groundwater.py  test_taiwan_wra_groundwater_daily.py  test_usgs_wra_config.py
tests/test_groundwater/: test_drought.py  test_wells.py
tests/test_hydrology/: test_hydrology.py
tests/test_io/: test_interop.py
tests/test_models/: test_gr4j_uq.py  test_models.py  test_rainfall_runoff.py
tests/test_spatial/: test_spatial.py
tests/test_utils/: test_export_formats.py  test_http_client.py
tests/test_validation/: test_uq_benchmark.py
